--- a/next-tss/temlpates/all-in-one.yaml.yaml
+++ b/next-tss/temlpates/all-in-one.yaml.yaml
@@ -1,56 +1,54 @@
 # ====================================================================
 # PostgreSQL Service (Wave 0)
-# 役割: データベースの電話帳
 # ====================================================================
 apiVersion: v1
 kind: Service
 metadata:
   name: db
-  namespace: next
+  namespace: "{{ .Release.Namespace }}"
   annotations:
-    "argocd.argoproj.io/sync-wave": "0" # 第0陣として、最優先でデプロイする
+    "argocd.argoproj.io/sync-wave": "0"
 spec:
   ports:
   - port: 5432
     targetPort: 5432
   selector:
     app.kubernetes.io/name: postgres
-    app.kubernetes.io/instance: nextjs-tss-pre # 例としてリリース名を設定
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
 
 ---
 # ====================================================================
 # PostgreSQL StatefulSet (Wave 0)
-# 役割: データベースの家（Pod）と倉庫（PVC）
 # ====================================================================
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
-  namespace: next
+  namespace: "{{ .Release.Namespace }}"
   annotations:
-    "argocd.argoproj.io/sync-wave": "0" # 第0陣として、最優先でデプロイする
+    "argocd.argoproj.io/sync-wave": "0"
 spec:
   serviceName: "db"
   replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: postgres
-      app.kubernetes.io/instance: nextjs-tss-pre # 例としてリリース名を設定
+      app.kubernetes.io/instance: "{{ .Release.Name }}"
   template:
     metadata:
       labels:
         app.kubernetes.io/name: postgres
-        app.kubernetes.io/instance: nextjs-tss-pre # ServiceがこのPodを見つけられるようにする
+        app.kubernetes.io/instance: "{{ .Release.Name }}"
     spec:
       containers:
       - name: postgres
-        image: "postgres:15"
+        image: "{{ .Values.postgresql.image }}"
         ports:
         - containerPort: 5432
           name: postgres
         envFrom:
         - secretRef:
-            name: postgres-secret # 事前に作っておいたSecretを参照
+            name: postgres-secret
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
@@ -59,33 +57,31 @@ spec:
       name: postgres-storage
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "local-path"
+      storageClassName: "{{ .Values.postgresql.storage.storageClassName }}"
       resources:
         requests:
-          storage: "1Gi"
+          storage: "{{ .Values.postgresql.storage.size }}"
 
 ---
 # ====================================================================
 # Migration Job (Wave 1)
-# 役割: マイグレーションとシーディングを実行する職人さん
 # ====================================================================
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: nextjs-tss-pre-migrate-seed # Helmを使わないので、名前を固定
-  namespace: next
+  name: "{{ .Release.Name }}-migrate-seed"
+  namespace: "{{ .Release.Namespace }}"
   annotations:
     "argocd.argoproj.io/hook": "Sync"
-    "argocd.argoproj.io/sync-wave": "1" # DB(wave:0)の後に実行
+    "argocd.argoproj.io/sync-wave": "1"
     "argocd.argoproj.io/hook-delete-policy": "BeforeHookCreation,HookSucceeded"
 spec:
   template:
     spec:
       containers:
       - name: migrator-seeder
-        # ★注意: このイメージタグはCI/CDで動的に設定する必要があるかもしれんで
-        image: "rnagashiro/my-nextjs-app:latest"
-        imagePullPolicy: IfNotPresent
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default "latest" }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         command:
           - "/bin/sh"
           - "-c"
@@ -102,57 +98,54 @@ spec:
 ---
 # ====================================================================
 # Next.js App Service (Wave 2)
-# 役割: Next.jsアプリの電話帳
 # ====================================================================
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextjs-tss-pre
-  namespace: next
+  name: "{{ .Release.Name }}"
+  namespace: "{{ .Release.Namespace }}"
   annotations:
-    "argocd.argoproj.io/sync-wave": "2" # マイグレーション(wave:1)の後に実行
+    "argocd.argoproj.io/sync-wave": "2"
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   ports:
-    - port: 3000
+    - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
   selector:
     app.kubernetes.io/name: next-chart
-    app.kubernetes.io/instance: nextjs-tss-pre
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
 
 ---
 # ====================================================================
 # Next.js App Deployment (Wave 2)
-# 役割: Next.jsアプリの家（Pod）
 # ====================================================================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nextjs-tss-pre
-  namespace: next
+  name: "{{ .Release.Name }}"
+  namespace: "{{ .Release.Namespace }}"
   annotations:
-    "argocd.argoproj.io/sync-wave": "2" # マイグレーション(wave:1)の後に実行
+    "argocd.argoproj.io/sync-wave": "2"
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app.kubernetes.io/name: next-chart
-      app.kubernetes.io/instance: nextjs-tss-pre
+      app.kubernetes.io/instance: "{{ .Release.Name }}"
   template:
     metadata:
       labels:
         app.kubernetes.io/name: next-chart
-        app.kubernetes.io/instance: nextjs-tss-pre
+        app.kubernetes.io/instance: "{{ .Release.Name }}"
     spec:
       containers:
         - name: next-chart
-          # ★注意: このイメージタグはCI/CDで動的に設定する必要があるかもしれんで
-          image: "rnagashiro/my-nextjs-app:latest"
-          imagePullPolicy: IfNotPresent
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default "latest" }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 3000
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           env:
           - name: DATABASE_URL
