--- a/next-tss/temlpates/ingress.yaml
+++ b/next-tss/temlpates/ingress.yaml
@@ -4,8 +4,8 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}
   labels:
-    app.kubernetes.io/name: {{ .Chart.Name }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: "{{ .Chart.Name }}"
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
   annotations:
     {{- toYaml .Values.ingress.annotations | nindent 4 }}
 spec:
