--- a/nextjs/Chart.yaml
+++ b/nextjs/Chart.yaml
@@ -1,6 +1,17 @@
+# Chart.yaml
 apiVersion: v2
 name: my-nextjs-app
 description: A Helm chart for my Next.js application
+
+# A chart can be either an 'application' or a 'library' chart.
+# Application charts are installable, while library charts provide templates
+# to be shared with other charts.
 type: application
+
+# This is the chart version. This version number should be incremented each time you make changes
+# to the chart and its templates.
 version: 0.1.0
+
+# This is the version number of the application being deployed. This version number should be
+# incremented each time you publish a new version of the application.
 appVersion: "1.0.0"
