--- a/nextjs/values.yaml
+++ b/nextjs/values.yaml
@@ -45,3 +45,9 @@ autoscaling:
 nodeSelector: {}
 tolerations: []
 affinity: {}
+
+prisma:
+  # 事前に作成したSecretの名前を指定します
+  existingSecret: "my-postgres-secret"
+  # Secret内でDATABASE_URLが格納されているキーの名前
+  databaseUrlKey: "database-url"
