--- a/nextjs/templates/deployment.yaml
+++ b/nextjs/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.prisma.existingSecret }}
+                  name: {{ .Values.prisma.existingSecret }} # ここがvalues.yamlを参照している
                   key: {{ .Values.prisma.databaseUrlKey }}
           # ↑↑↑ ここまで追加しました ↑↑↑
 
